adding more text in paragraph about loving skiing

--- a/Mission5/Views/Skiing/Index.cshtml
+++ b/Mission5/Views/Skiing/Index.cshtml
@@ -53,6 +53,7 @@
 
             <p>
                 Skiing has also been such a fun way to bond with Zak because he is insanely good and such a patient teacher.
+                It is so fun watching him to jumps and tricks.
                 I don’t think I could have had anyone else teach me because I would probably have gotten too frustrated.
                 Luckily for me, Zak knows the perfect balance of when to push me and when to say we can go sit in the lodge.
                 It has also been so fun traveling with Zak’s family to go skiing. A couple of weeks ago, we went to Jackson Hole, and it was such a fun trip!
